@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE([galculator], [1.1.1])
+AM_INIT_AUTOMAKE([galculator], [1.1.2CVS])
 AM_MAINTAINER_MODE
 
 AM_CONFIG_HEADER(config.h)
